test/files/parser/errors/assign-number.organic
// Assign to number
// 4 ~ 1 ~ Expected variable name, received "42".

42 = 0
